module/core/former/tests/inc/enum_unit_tests/compile_fail/subform_scalar_on_unit.stderr
error: #[ subform_scalar ] cannot be used on unit variants. Unit variants have no fields to form. Consider removing the #[ subform_scalar ] attribute.
 --> tests/inc/enum_unit_tests/compile_fail/subform_scalar_on_unit.rs:6:3
  |
6 | /   #[ subform_scalar ] // This should cause a compile error
7 | |   MyUnit,
  | |________^
